> ADD PILLS / TABS to defaults.js

TODO: V0.11.0
> Clear out any remaining ideas from Wunderlist


TODO: V1.0
> Use git submodules, so style is available apart from plugin
> Finish sexy docs / demo

Changelog:
0.9.0:
- Redo Tabs
- Redo Pills
- Redo Pagination
- The above components now follow the pattern of the new Tables and Forms modules.

0.8.3:
- Remove select_arrow.gif from select in Resetize.
- Remove extranous comment.

0.8.2:
- Changed class "alert_message" to "alert-message" in flash message helper.
  Trying to me more consistent in using hypenation in HTML/CSS, since that's
  generally more standard than snake case.
- Add horizontal form alignment helpers in forms library
- Change form label so it doesn't have to be .control-label if it is first-child
- Fix gray line above div.submit in form-horizontal-responsive
- Change form style naming pattern to match table naming pattern


0.8.1:
- Completely revised the tables library to be based on stack of mixins
- Changed default $light2 to a ligher color.
- Added $medium-line style.
- Added $dark-line style (it was present but had a typo and was unused in 0.8.0)
- Note on the line styles: these are not heavily used, I'm experimenting with
  the usefulness of them right now. They may be removed before 1.0, but I think
  they're kind of a good idea.

0.8.0:
- Significant overhaul to styles:
  The goal of Jetpack is to be a bootstrap that helps without hurting,
  meaning it never gets in your way with styles you have to override.
  While existing versions have done a pretty good job of this, there are
  still a number of "built-in" styles that get included when you use
  different components. That's not the best. This release removes all
  'default' styles and makes sure everything is a mixin or a reset that you
  include by choice, not by default.
- Refined header styles to make them procedural based on base font size.
- Renamed `mixins` module as `core`, to indicate that it's required
- Removed `font` mixin