@@ -1,3 +1,3 @@
 module Jetpack
-	VERSION = "0.8.3"
+	VERSION = "0.9.0"
 end
