@@ -36,6 +36,10 @@
 @include js-styles;
 
 // UBIQUITOUS DEFAULTS
+a { color: $color1;
+  &:visited { color: $color2; }
+}
+
 
 // INTERFACE ELEMENTS
 span.label { @include label; }
