@@ -6,29 +6,29 @@
 // instead.
 
 // COLOR DEFINITIONS
-$light1: #EAEBEC;
-$light2: #C9CACB;
+$light1: #E2E0E0;
+$light2: #C4BCBC;
 
-$dark1: #3C3E40;
-$dark2: #262728;
+$dark1: #686363;
+$dark2: #302D2D;
 
-$color1: #F4B84D;
-$color2: #E59013;
+$color1: #579E36;
+$color2: #447C29;
 
-$alt1: #4E7DF2;
-$alt2: #2C4A84;
+$alt1: #65A6B7;
+$alt2: #3C7E8E;
 
-$success1: #D7EDC3;
-$success2: #68AF2F;
+$success1: #9ED186;
+$success2: #447C29;
 
-$notice1: #FFFD7D;
-$notice2: #FFD939;
+$notice1: #FFDD92;
+$notice2: #8E6938;
 
-$error1: #FFDCDC;
-$error2: #D64338;
+$error1: #F4CBBE;
+$error2: #9B3524;
 
-$white: #FFFFFF;
-$black: #000000;
+$white: #FCFAFA;
+$black: #111010;
 
 // LINE STYLES
 $light-line: 1px solid $light1;
